--- a/index.html
+++ b/index.html
@@ -8,9 +8,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Trends Game</title>
     <!--        CDN   -->
-    <!--        <link rel="stylesheet" href="http://cdn.jsdelivr.net/g/jquery.ui@1.10%28jquery.ui.core.min.js+jquery.ui.widget.min.js+jquery.ui.mouse.min.js+jquery.ui.sortable.min.js%29">-->
+            
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootswatch/4.0.0-alpha.6/lumen/bootstrap.min.css">
+    
     <!--    <link rel="stylesheet" href="../static/bootstrap-4.0.0-alpha.6/css/bootstrap.min.css">-->
-    <link rel="stylesheet" href="../static/bootswatch-4.0.0-alpha.6/lumen/bootstrap.min.css">
+<!--    <link rel="stylesheet" href="../static/bootswatch-4.0.0-alpha.6/lumen/bootstrap.min.css">-->
 <!--    <link rel="stylesheet" href="../static/jquery-ui-1.12.1/jquery-ui.min.css">-->
     <link rel="stylesheet" href="css/style.css">
 </head>
@@ -39,7 +41,6 @@
     <!--        <script src="http://cdn.jsdelivr.net/g/jquery.ui@1.10%28jquery.ui.core.min.js+jquery.ui.widget.min.js+jquery.ui.mouse.min.js+jquery.ui.sortable.min.js%29"></script>-->
     <!--       CDN ends -->
     <!--        <script src="../static/jquery-ui-1.12.1/jquery-ui.js" ></script>-->
-    <script src="../static/jquery-3.1.1.slim.min.js"></script>
 <!--    <script src="../static/sortable.req.min.js"></script>
     <script src="../static/angular.min.js"></script>
     <script src="../static/angular_modules/sortable.min.js"></script>
