* added footer  * code clean up  * visual improvements

--- a/index.html
+++ b/index.html
@@ -4,11 +4,12 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="description" content="">
+    <meta name="theme-color" content="#28b62c">
+    <meta name="description" content="A game based on google trends">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Trends Game</title>
+    <link rel="shortcut icon" href="assets/favicon.png" type="image/x-icon">
     <!--        CDN   -->
-            
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootswatch/4.0.0-alpha.6/lumen/bootstrap.min.css">
     
     <!--    <link rel="stylesheet" href="../static/bootstrap-4.0.0-alpha.6/css/bootstrap.min.css">-->
@@ -23,11 +24,11 @@
     <div class="container-fluid">
         <div class="container-logo">
             <div class="G letter">G</div>
-            <div class="o letter">o</div>
-            <div class="o letter">o</div>
-            <div class="g letter">g</div>
-            <div class="l letter">l</div>
-            <div class="e letter">e</div>
+            <div class="o letter">T</div>
+            <div class="r letter">r</div>
+            <div class="g letter">e</div>
+            <div class="l letter">n</div>
+            <div class="e letter">d</div>
         </div>
 
         <div class="gameButton">
@@ -36,6 +37,11 @@
 
     </div>
 
+<footer class="footer foot-valign">
+    <div class="container">
+        <p class="text-danger text-muted">This game is under construction!</p> Made with <span class="heart">❤</span> by <a href="https://github.com/ajiteshr7">ajiteshr7</a></span>
+    </div>
+</footer>
     <!--   scripts   -->
     <!--       CDN start -->
     <!--        <script src="http://cdn.jsdelivr.net/g/jquery.ui@1.10%28jquery.ui.core.min.js+jquery.ui.widget.min.js+jquery.ui.mouse.min.js+jquery.ui.sortable.min.js%29"></script>-->
