minor bug fixes

--- a/game.html
+++ b/game.html
@@ -47,7 +47,7 @@
     <!--       CDN start -->
         
         <script src="https://cdn.jsdelivr.net/jquery/3.2.1/jquery.min.js"></script>    
-        <script src="http://cdn.jsdelivr.net/g/jquery.ui@1.10%28jquery.ui.core.min.js+jquery.ui.widget.min.js+jquery.ui.mouse.min.js+jquery.ui.sortable.min.js%29"></script>
+        <script src="https://cdn.jsdelivr.net/g/jquery.ui@1.10%28jquery.ui.core.min.js+jquery.ui.widget.min.js+jquery.ui.mouse.min.js+jquery.ui.sortable.min.js%29"></script>
         <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.5/angular.min.js"></script>
         <script src="https://cdn.jsdelivr.net/angular.ui-sortable/0.17.1/sortable.min.js"></script>
     
