--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <title>Trends Game</title>
     <link rel="shortcut icon" href="assets/favicon.png" type="image/x-icon">
     <!--        CDN   -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootswatch/4.0.0-alpha.6/lumen/bootstrap.min.css">
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootswatch@4.0.0-beta.2/dist/lumen/bootstrap.min.css">
     
     <!--    <link rel="stylesheet" href="../static/bootstrap-4.0.0-alpha.6/css/bootstrap.min.css">-->
 <!--    <link rel="stylesheet" href="../static/bootswatch-4.0.0-alpha.6/lumen/bootstrap.min.css">-->
